# verified-c-verifier

./: CITATION.cff  README.md  pyproject.toml
cli/: leancp_verify.py
docs/: verification_contract.md
examples/: README.md
public_material/verified_c_export_bundle/: generation.json  output.c  provenance.json
public_material/verified_c_export_bundle/lean_source/: lakefile.lean
public_material/verified_c_export_bundle/lean_source/HeytingLean/LeanSP/: LeanSP.lean
public_material/verified_c_export_bundle/lean_source/HeytingLean/LeanSP/Memory/: EVMStorage.lean
public_material/verified_c_export_bundle/lean_source/HeytingLean/LeanSP/RealWorld/: EscrowVerified.lean
public_material/verified_c_export_bundle/lean_source/HeytingLean/LeanSP/Verify/: Hoare.lean
public_material/verified_c_export_bundle/lean_source/HeytingLean/LoF/LeanKernel/: FullKernelSKYCorrectness.lean  WHNF.lean
scripts/: smoke_release_artifacts.sh  verify_all.sh  verify_negative_cases.sh
verifier/: __init__.py  models.py  verify.py  version.py
